# pypi-downloads-chart

./: .gitignore  LICENSE  generate_index.py  jobs.toml  main.py  pyproject.toml
.cursor/rules/: run.mdc
.github/workflows/: build-and-deploy.yml
sqls/: README.md  download_by_country_30d.sql  download_by_date.sql  download_by_date_all_versions_summary.sql  download_by_date_by_version.sql  installer_stats_30d.sql  recent_30_days_downloads.sql  total_downloads.sql
templates/: chart_script.js  index.html
