[project]
name = "pypi-downloads-chart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.36.0",
    "pandas>=2.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
